--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "2"
 services:
 
   db:
-    image: mysql:8.0
+    container_name: pennarguear-db
+    image: mysql:5.7.31
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: network
@@ -16,10 +17,9 @@ services:
       - '3306'
     volumes:
       - ./db:/var/lib/mysql
-    networks:
-    - wp
 
   wordpress:
+    container_name: pennarguear-web
     depends_on:
      - db
     build:
@@ -30,11 +30,6 @@ services:
       - 8080:80
     volumes:
       - ./www:/var/www/html
-    networks:
-    - wp
-
-networks:
-  wp:
 
 volumes:
   www:
