--- a/OS-create-instance.yml
+++ b/OS-create-instance.yml
@@ -5,18 +5,18 @@
 
   vars_prompt:
     - name: "openstack_user_domain"
-      prompt: "Openstack user Domain"
       private: no
+      default: "DIS"
     - name: "openstack_user"
-      prompt: "Openstack User"
       private: no
+      default: "PFE-AWX"
     - name: "openstack_project"
-      prompt: "Openstack Project"
       private: no
+      default: "PFE"
     - name: "openstack_password"
       prompt: "Password"
+      default: "network"
     - name: "openstack_auth_url"
-      prompt: "Openstack auth Url"
       private: no
       default: "https://192.168.4.45:5000/v3"
     
