--- a/OS-create-instance.yml
+++ b/OS-create-instance.yml
@@ -18,6 +18,9 @@
     - name: "openstack_auth_url"
       private: no
       default: "https://192.168.4.45:5000/v3"
+      
+  vars_files:
+    - vars/instance_configuration.yml
     
   environment:
     http_proxy: http://192.168.4.8:3128
