--- a/OS-create-instance.yml
+++ b/OS-create-instance.yml
@@ -138,6 +138,10 @@
 
 - hosts: "{{ instance_name }}"
   
+  vars_files:
+    - vars/instance_configuration.yml
+    - vars/application_configuration.yml
+    
   vars:
 
   environment:
