--- a/vars/instance_configuration.yml
+++ b/vars/instance_configuration.yml
@@ -1,7 +1,12 @@
 ---
 - hosts:
   become: yes
-  
+ 
+- auth_url: "192.168.4.45"
+- username: "PFE-AWX"
+- password: "network"
+- project_name: "PFE"
+- os_user_domain_name: "DIS"
 - flavor_name: "m1.tiny"
 - key_name: "pfe-awx-key"
 - image_name: "Debian-10.4-amd64"
