--- a/vars/auth_PFE.yml
+++ b/vars/auth_PFE.yml
@@ -1,6 +1,6 @@
 ---
 
-openstack_auth_url: "https://192.168.4.45"
+openstack_auth_url: "https://192.168.4.45:5000/v3"
 openstack_user: "PFE-AWX"
 openstack_password: "network"
 openstack_project: "PFE"
