--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -41,7 +41,9 @@
       state: latest
       
   - name: install trusted GPG key
-    command: wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | apt-key add
+    apt-key:
+      url: http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc
+      state: present
     
   - name: create a repository file for PostgreSQL
     command: sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list'
