--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -75,18 +75,13 @@
       name: python-pexpect
       state: present
 
-  - name: Configure LANG of postgres
-    copy:
-      dest: /etc/default/locale
-      content: |
-        LC_ALL=en_US.UTF-8
-        LC_CTYPE=en_US.UTF-8
-        LC_MESSAGES=en_US.UTF-8
-        LANG=en_US.UTF-8
-        LANGUAGE=en_US.UTF-8
+  - name: Ensure the locale exists
+    locale_gen:
+      name: en_US.UTF-8
+      state: present
 
-  - name: Generate local
-    command: locale-gen "en_US.UTF-8"
+  - name: set as default locale
+    command: localectl set-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
 
   - name: change PostgreSQL User password
     expect:
