--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -99,27 +99,34 @@
         (?i)Enter new UNIX password: "N3twork!"
         (?i)Retype new UNIX password: "N3twork!"
 
+- hosts: all
+  remote_user: postgres
+
+  tasks:
+
   - name: Create sonarqube database
-    become_user: postgres
     postgresql_db: 
       name: sonarqube
       owner: sonar
 
   - name: Create sonar user on postgresql
-    become_user: postgres
     postgresql_user:
       name: "sonar"
       password: "N3twork!"
       db: sonarqube
   
   - name: Grant ALL priveleges to sonar user on sanarqube db
-    become_user: postgres
     postgresql_privs:
       db: sonarqube
       role: sonar
       objs: ALL_IN_SCHEMA
       privs: ALL
       type: database
+
+- hosts: all
+  become: yes
+
+  tasks: 
 
   - name: restart PostgreSQL
     command: systemctl restart postgresql
