--- a/gitlab.yml
+++ b/gitlab.yml
@@ -58,7 +58,23 @@
 
   ## Editing the GitLab configuration file
 
-  
+  - name: set external_url
+    lineinfile:
+      path: /etc/gitlab/gitlab.rb
+      state: present
+      regexp: 'external_url 'http://example.com''
+      line: 'external_url 'https://srv-gital-awx.com''
+      backrefs: yes
+    
+  - name: set letsencrypt
+    lineinfile:
+      path: /etc/gitlab/gitlab.rb
+      state: present
+      regexp: 'letsencrypt['contact_emails'] = [] '
+      line: 'letsencrypt['contact_emails'] = ['louis.pennarguear@reseau.eseo.fr']'
+      backrefs: yes
 
+  - name: reconfigure gitlab-ctl
+    command: gitlab-ctl reconfigure
   
   
