--- a/gitlab.yml
+++ b/gitlab.yml
@@ -39,7 +39,11 @@
     apt:
       name: ufw
       state: present
-
+  
+  - name: Enable ufw
+    ufw:
+      state: enabled
+      
   - name: Allow all access to tcp port 80
     ufw:
       rule: allow
