--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -96,8 +96,8 @@
       command: passwd postgres
       responses:
         Question:
-        (?i)Enter new UNIX password: "N3twork!"
-        (?i)Retype new UNIX password: "N3twork!"
+        (?i)New password: "N3twork!"
+        (?i)Retype new password: "N3twork!"
 
   - name: Create sonarqube database
     become: yes
