ansible_become_password: network

--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -102,6 +102,7 @@
   - name: Create sonarqube database
     become: yes
     become_user: postgres
+    ansible_become_password: network
     postgresql_db: 
       name: sonarqube
       owner: sonar
@@ -109,6 +110,7 @@
   - name: Create sonar user on postgresql
     become: yes
     become_user: postgres
+    ansible_become_password: network
     postgresql_user:
       name: "sonar"
       password: "N3twork!"
@@ -117,6 +119,7 @@
   - name: Grant ALL priveleges to sonar user on sanarqube db
     become: yes
     become_user: postgres
+    ansible_become_password: network
     postgresql_privs:
       db: sonarqube
       role: sonar
