--- a/sonarQube.yml
+++ b/sonarQube.yml
@@ -101,6 +101,7 @@
 
   - name: Create sonarqube database
     become: yes
+    become_method: su
     become_user: postgres
     postgresql_db: 
       name: sonarqube
@@ -108,6 +109,7 @@
 
   - name: Create sonar user on postgresql
     become: yes
+    become_method: su
     become_user: postgres
     postgresql_user:
       name: "sonar"
@@ -116,6 +118,7 @@
   
   - name: Grant ALL priveleges to sonar user on sanarqube db
     become: yes
+    become_method: su
     become_user: postgres
     postgresql_privs:
       db: sonarqube
