--- a/testlink.yml
+++ b/testlink.yml
@@ -21,11 +21,27 @@
       url: "{{ testlink_tarball_url }}"
       dest: /tmp/testlink.tar.gz
 
+  - name: Create user admin
+    user:
+      name: "{{ nginx_user }}"
+      comment: user admin for nginx
+      group: "{{ nginx_user }}"
+  
+  - name: change admin User password
+    expect:
+      command: passwd admin
+      responses:
+        Question:
+        (?i)New password: "N3twork!"
+        (?i)Retype new password: "N3twork!"
+
   - name: unarchive testlink tarball
     unarchive:
       src: /tmp/testlink.tar.gz
       dest: /tmp
       copy: no
+      owner: "{{ nginx_user }}"
+      group: "{{ nginx_user }}"
 
   # Create TestLink workspace
   - name: check testlink temp path
