--- a/testlink.yml
+++ b/testlink.yml
@@ -21,6 +21,11 @@
       url: "{{ testlink_tarball_url }}"
       dest: /tmp/testlink.tar.gz
 
+  - name: create admin group
+    group:
+      name: "{{ nginx_user }}"
+      state: present
+
   - name: Create user admin
     user:
       name: "{{ nginx_user }}"
