--- a/testlink.yml
+++ b/testlink.yml
@@ -22,7 +22,7 @@
       dest: /tmp/testlink.tar.gz
 
   - name: install pip
-    command: apt install python2-pip -y
+    command: apt-get install python-pip -y
 
   - name: Make sure pymysql is present
     pip:
