--- a/testlink.yml
+++ b/testlink.yml
@@ -24,7 +24,10 @@
   - name: install pip
     command: apt install python-pip -y
 
-  - name: Make sure pymysql is present
+  - name: Make sure pymysql2 is present
+    command: pip install pymysql
+  
+  - name: Make sure pymysql3 is present
     command: pip3 install pymysql
 
   - name: create admin group
