--- a/testlink.yml
+++ b/testlink.yml
@@ -16,7 +16,14 @@
 
   tasks:
 
-  ### LAMP SERVER INSTALLATION ###
+  - name: install pip
+    command: apt install python-pip -y
+
+  - name: install ansible
+    pip: 
+      name: ansible
+
+### LAMP SERVER INSTALLATION ###
 
   - name: install LAMP server
     apt:
