--- a/testlink.yml
+++ b/testlink.yml
@@ -116,7 +116,7 @@
       state: present
       encoding: utf8
       collation: utf8_general_ci
-      login_unix_socket: /etc/mysql/my.cnf
+      login_unix_socket: /var/run/mysqld/mysqld.sock
 
   - name: Copy our database to server
     copy:
@@ -131,7 +131,7 @@
       name: "{{ testlink_db_name }}"
       state: import
       target: /tmp/testlink-1.9.19-db-withCamillesTestProject.sql
-      login_unix_socket: /etc/mysql/my.cnf
+      login_unix_socket: /var/run/mysqld/mysqld.sock
     ignore_errors: yes
 
   - name: create user for testlink database
@@ -141,5 +141,5 @@
       state: present
       password: "{{ testlink_db_password }}"
       priv: "{{ testlink_db_name }}.*:ALL"
-      login_unix_socket: /etc/mysql/my.cnf
+      login_unix_socket: /var/run/mysqld/mysqld.sock
     ignore_errors: yes
