--- a/testlink.yml
+++ b/testlink.yml
@@ -14,6 +14,9 @@
     nginx_user: 'admin'
     item: '/testlink'
     ansible_python_interpreter: /usr/bin/python3
+  
+  vars_files:
+    - sql/testlink-1.9.19-db-withCamillesTestProject.sql
 
   tasks:
 
