--- a/testlink.yml
+++ b/testlink.yml
@@ -14,9 +14,6 @@
     nginx_user: 'admin'
     item: '/testlink'
     ansible_python_interpreter: /usr/bin/python3
-  
-  vars_files:
-    - sql/testlink-1.9.19-db-withCamillesTestProject.sql
 
   tasks:
 
@@ -121,13 +118,10 @@
       collation: utf8_general_ci
       login_unix_socket: /var/run/mysqld/mysqld.sock
 
-  - name: Copy our database to server
-    copy:
-      src: testlink-1.9.19-db-withCamillesTestProject.sql
+  - name: download sql file
+    get_url:
+      url: https://github.com/nanarCss/docker-css/blob/main/sql/testlink-1.9.19-db-withCamillesTestProject.sql
       dest: /tmp/
-      owner: root
-      group: root
-      mode: 0644
 
   - name: create testlink table and data
     mysql_db:
