--- a/testlink.yml
+++ b/testlink.yml
@@ -118,10 +118,13 @@
       collation: utf8_general_ci
       login_unix_socket: /var/run/mysqld/mysqld.sock
 
-  - name: download sql file
-    get_url:
-      url: https://github.com/nanarCss/docker-css/sql/testlink-1.9.19-db-withCamillesTestProject.sql
+  - name: Copy our database to server
+    copy:
+      src: /sql/testlink-1.9.19-db-withCamillesTestProject.sql
       dest: /tmp/
+      owner: root
+      group: root
+      mode: 0644
 
   - name: create testlink table and data
     mysql_db:
