--- a/testlink.yml
+++ b/testlink.yml
@@ -63,7 +63,7 @@
     ufw: state=enabled
     
   - name: changing default incoming policy to 'deny'
-    shell: sudo ufw default deny
+    shell: ufw default deny
     
   - name: autoriser les connexions à Nginx
     ufw: 
@@ -77,9 +77,9 @@
   - name: sed lines
     command: "{{ item }}"
     with_items:
-        - sudo sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g' /etc/php/7.0/fpm/php.ini
-        - sudo sed -i 's/listen.owner = www-data/listen.owner = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
-        - sudo sed -i 's/listen.group = www-data/listen.group = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
+        - sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g' /etc/php/7.0/fpm/php.ini
+        - sed -i 's/listen.owner = www-data/listen.owner = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
+        - sed -i 's/listen.group = www-data/listen.group = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
     
   - name: Create directory if it does not exist
     ansible.builtin.file:
@@ -88,7 +88,7 @@
       mode: '0755'
 
   - name: Move file
-    command: sudo mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.disabled
+    command: mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.disabled
     
   - name: Copy our testlink conf file to server
     copy:
