--- a/testlink.yml
+++ b/testlink.yml
@@ -96,7 +96,7 @@
     
   - name: rename default.conf if exists
     command: mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.disabled
-    when: default_conf_present
+    when: default_conf_present.stat.exists
 
   - name: Copy our testlink conf file to server
     copy:
