--- a/testlink.yml
+++ b/testlink.yml
@@ -90,12 +90,13 @@
       mode: '0755'
 
   - name: stat default.conf
-    stat: path= /etc/nginx/conf.d/default.conf
-    register: default_conf_present
+    stat: 
+      path: /etc/nginx/conf.d/default.conf
+    register: stat_result
     
   - name: rename default.conf if exists
     command: mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.disabled
-    when: default_conf_present.stat.exists
+    when: stat_result.stat.exists
 
   - name: Copy our testlink conf file to server
     copy:
