--- a/testlink.yml
+++ b/testlink.yml
@@ -211,6 +211,7 @@
       name: "{{ testlink_db_name }}"
       state: import
       target: /tmp/testlink-1.9.19-db-withCamillesTestProject.sql
+      login_unix_socket: /var/run/mysqld/mysqld.sock
 
   - name: create user for testlink database
     mysql_user:
