--- a/testlink.yml
+++ b/testlink.yml
@@ -197,6 +197,7 @@
       state: present
       encoding: utf8
       collation: utf8_general_ci
+      login_unix_socket: /var/run/mysqld/mysqld.sock
 
   - name: Copy our database to server
     copy:
@@ -220,6 +221,7 @@
       state: present
       password: "{{ testlink_db_password }}"
       priv: "{{ testlink_db_name }}.*:ALL"
+      login_unix_socket: /var/run/mysqld/mysqld.sock
 
   - name: import secure installation of mysql
     copy:
