--- a/testlink.yml
+++ b/testlink.yml
@@ -82,7 +82,19 @@
         - sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g' /etc/php/7.0/fpm/php.ini
         - sed -i 's/listen.owner = www-data/listen.owner = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
         - sed -i 's/listen.group = www-data/listen.group = nginx/g' /etc/php/7.0/fpm/pool.d/www.conf
-    
+  
+  - name: edit /etc/php/7.0/fpm/php.ini execution time
+    lineinfile:
+      path: /etc/php/7.0/fpm/php.ini
+      regexp: max_execution_time = 30
+      replace: max_execution_time = 120
+
+  - name: edit /etc/php/7.0/fpm/php.ini execution time
+    lineinfile:
+      path: /etc/php/7.0/fpm/php.ini
+      regexp: ;extension=php_mysqli.dll
+      replace: extension=php_mysqli.dll
+
   - name: Create directory if it does not exist
     ansible.builtin.file:
       path: /var/www/testlink/
