--- a/testlink-postgres.yml
+++ b/testlink-postgres.yml
@@ -114,19 +114,19 @@
     command: chmod -R 777 /var/testlink
 
   - name: edit /etc/php/7.0/fpm/php.ini execution time
-    lineinfile:
+    replace:
       path: /etc/php/7.0/fpm/php.ini
       regexp: max_execution_time = 30
       replace: max_execution_time = 120
 
   - name: edit /etc/php/7.0/fpm/php.ini pgsql.dll
-    lineinfile:
+    replace:
       path: /etc/php/7.0/fpm/php.ini
       regexp: ;extension=php_pdo_pgsql.dll
       replace: extension=php_pdo_pgsql.dll
   
   - name: edit /etc/php/7.0/fpm/php.ini pgsql.dll
-    lineinfile:
+    replace:
       path: /etc/php/7.0/fpm/php.ini
       regexp: ;extension=php_pgsql.dll
       replace: extension=php_pgsql.dll
